# BalanceTextIneractive

./: .gitignore  CMakeLists.txt  CMakeProject2.cpp  CMakeSettings.json  Mistal_API_Key.txt  README.md  Test.h  vcpkg_rf.txt
AIModel/: AIModel.cpp  AIModel.h
BalancingTree/: Action.h  ActionsNRulesInput.cpp  ActionsNRulesInput.h  ActionsNRulesSource.cpp  ActionsNRulesSource.h  ActionsnNRules.cpp  ActionsnNRules.h  BalancingTree.cpp  BalancingTree.h  Rule.h
Description/: AlgorithmDescription.md  Conclusions and observations.md  RequestStructure.md  test_easy_level.md  test_hard_level.md  test_middle_level.md
ModelCommunication/: Config.cpp  Config.h  ModelCommunication.cpp  ModelCommunication.h
PreviousActions/: PreviousActions.cpp  PreviousActions.h
ProgramRequests/: ProgramRequests.cpp  ProgramRequests.h  Request.h  RequestStrcutureSource.h  RequestStructureInput.cpp  RequestStructureInput.h
RequestProcessing/: RequestProcessing.cpp  RequestProcessing.h
UserInteractive/: ConsoleInput.cpp  ConsoleInput.h  InputData.h  OutputData.cpp  OutputData.h  ScriptInput.cpp  ScriptInput.h  UserInteractive.cpp  UserInteractive.h
